--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -10,12 +10,33 @@
 
     <link href='//fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
     <%= stylesheet_link_tag :site %>
+    <%= stylesheet_link_tag :typeography %>
     <%= javascript_include_tag :all %>
   </head>
 
   <body class="<%= page_classes %>">
     <%= yield %>
   </body>
+
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          (801) 829-1479
+          questions@varsitycode.com
+          @varsitycode
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <p>
+            Copyright 2017 - Varsity Code
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
 </html>
