--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,7 +4,7 @@ title: Varisty Code
 <header id="container" class="intro">
   <div id="landing-header">
     <div class="row">
-      <div class="col-lg-6 col-lg-offset-2">
+      <div class="col-lg-6 col-lg-offset-5">
         <h1>
           After School Coding Program
         </h1>
@@ -12,10 +12,13 @@ title: Varisty Code
           Ages 14-18
         </h5>
         <h5>
+          Starting The Week Of February 13, 2017
+        </h5>
+        <h5>
           Classes Held at Salt Lake Community College in Sandy
         </h5>
         <button class="btn btn-primary">
-          <%= link_to "Pre-Register Now", "https://docs.google.com/forms/d/e/1FAIpQLScEy9Qi5SVQO_N6YuCgbrXIb32ZvwBEC9epS3UmpuP8GS-0Ew/viewform" %>
+          <%= link_to "Pre-Register", "https://docs.google.com/forms/d/e/1FAIpQLScEy9Qi5SVQO_N6YuCgbrXIb32ZvwBEC9epS3UmpuP8GS-0Ew/viewform" %>
         </button>
       </div>
     </div>
@@ -28,7 +31,7 @@ title: Varisty Code
       <div class="col-sm-10 col-sm-offset-1 text-center">
         <h2>Gain Valuable Technical Skills</h2>
         <h4>The average software developer makes <a href="http://www.indeed.com/salary?q1=software+developer&l1=" id="salary_link">$95,000 per year</a></h4>
-        <p class="bigger">Learning web development is the first step on that journey. The sooner you get started, the sooner you'll be able to help direct the digial age.</p>
+        <p class="bigger">Learning web development is the first step on that journey. The sooner you get started, the sooner you'll be able to help direct the ditial age.</p>
       </div>
     </div>
   </section>
@@ -56,8 +59,10 @@ title: Varisty Code
           <div class="icon-header text-center">
             <%= image_tag "collaborate.svg" %>
           </div>
-          <h4 class="text-center">Work Collbarotaively With Your Classmates</h4>
-          <p>You don't know it unless you can teach it. Our curriculum requires you to code with a lab partner on everything you do. Every concept you learn you will be required to teach to your lab partner.</p>
+          <h4 class="text-center">Work Collaboratively</h4>
+          <p>
+            Our class will work collaboratively using GitHub. GitHub is how many companies collaborate on software. Knowledge of GitHub is becoming a prerequisite to work in technology. You’ll leave with a solid grasp of software collaboration.
+          </p>
         </div>
         <div class="col-lg-3 col-sm-6 wow fadeIn" data-wow-delay=".8s">
           <div class="icon-header text-center">
@@ -74,14 +79,14 @@ title: Varisty Code
 <div class="secondary-background">
   <section id=modern-skills" class="container-fluid">
     <div class="row">
-      <div class="col-lg-offset-2 col-lg-4">
+      <div class="col-sm-offset-2 col-sm-4">
         <h2>Learn Modern Technologies</h2>
         <p>Ask any technical hiring manager around, they will tell you these are required skills.</p>
         <p>These skills will allow you to build websites that work on computers, tablets, phones, and more.</p>
         <p>As a class, we will work on our code on GitHub (it's kind of like the Google Docs of code).</p>
         <p>Finally, when we are ready to share our websites with the world, we will host our code on Amazon Web Services (AWS) the world's leading cloud computing provider.</p>
       </div>
-      <div class="col-lg-offset-1 col-lg-4">
+      <div class="col-sm-offset-1 col-sm-4">
         <div id="tech-logos">
           <%= image_tag "tech.png" %>
         </div>
@@ -127,7 +132,7 @@ title: Varisty Code
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-6 wow fadeIn" data-wow-delay=".2s">
+        <div class="col-sm-6 wow fadeIn" data-wow-delay=".2s">
           <h4>What is tuition for this course?</h4>
           <p>$50 a week, which includes:</p>
           <ul>
@@ -137,7 +142,7 @@ title: Varisty Code
           </ul>
           <p>We are completely confident in our ability to transform you or your student's interest in the web into valuable technical skills. If you are not satisfied, we'll refund your tuition in full.</p>
         </div>
-        <div class="col-lg-6 wow fadeIn" data-wow-delay=".4s">
+        <div class="col-sm-6 wow fadeIn" data-wow-delay=".4s">
           <h4>What is the format of each class?</h4>
           <p>Weekly classes will be held at Salt Lake Community College's Sandy Campus.</p>
           <p>Each week we will:</p>
@@ -149,39 +154,39 @@ title: Varisty Code
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-6 wow fadeIn" data-wow-delay=".2s">
+        <div class="col-sm-6 wow fadeIn" data-wow-delay=".2s">
           <h4>Will there be Homework?</h4>
           <p>The goal of our course isn't a grade, but growth. </p>
           <p>We give students assignments and projects to do in their own time that allow them to be creative, have fun, and enjoy learning how to build in their own time at their own pace. </p>
         </div>
-        <div class="col-lg-6 wow fadeIn" data-wow-delay=".4s">
+        <div class="col-sm-6 wow fadeIn" data-wow-delay=".4s">
           <h4>What Pre-requisites Do you Recommend?</h4>
           <p>The biggest pre-requisite is enthousiasm. The biggest indicator for success is an excitement about the course itself. If you are excited about learning to code or creating your own website
           you will be primed to succeed.</p>
-          <p>Technically speaking, this course is shouldn't be too challenging. It's just a lot of new concepts that might take some time to sink in.</p>
+          <p>Technically speaking, a basic understanding of computing is expected. Students should be familiar with how to use the internet and create files and folders.</p>
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-6 wow fadeIn" data-wow-delay=".2s">
+        <div class="col-sm-6 wow fadeIn" data-wow-delay=".4s">
+          <h4>Do I have to bring my own computer?</h4>
+          <p>
+          Yes, you will need to pring a personal laptop computer to each class. Setting up a computer to write code can be tricky. Once it is setup this will give you the ability to work at home.
+          </p>
+        </div>
+        <div class="col-sm-6 wow fadeIn" data-wow-delay=".2s">
           <h4>What type of computer will I need to participate?</h4>
           <p>Any PC, Mac, or Linux  that has wifi and a browser.</p>
         </div>
-        <div class="col-lg-6 wow fadeIn" data-wow-delay=".4s">
-          <h4>Do I have to bring my own computer?</h4>
-          <p>
-          YES. You will need to pring a personal laptop computer to each class. Setting up a computer to write code can be tricky. Once it is setup this will give you the ability to work at home.
-          </p>
-        </div>
       </div>
       <div class="row">
-        <div class="col-lg-6 wow fadeIn" data-wow-delay=".2s">
+        <div class="col-sm-6 wow fadeIn" data-wow-delay=".2s">
           <h4>How big is each class?</h4>
           <p>
-          14 students per class or 1 teacher for every 7 students. Both teachers are present for every class.
+            14 students per class or 1 teacher for every 7 students. Both teachers are present for every class.
           </p>
           <p>Lab partners are similar in age which allows each lab group to progress at a rate they are comfortable with.</p>
         </div>
-        <div class="col-lg-6 wow fadeIn" data-wow-delay=".4s">
+        <div class="col-sm-6 wow fadeIn" data-wow-delay=".4s">
           <h4>My student loved their experience! Do you offer any more courses?</h4>
           <p>
           You know it! After this foundational course, we'll be offering more advanced web classes for those wanting to continue on.
@@ -193,40 +198,26 @@ title: Varisty Code
   </section>
 </div>
 
-<section id="still-have-questions">
+<!-- Action2 Section -->
+<section id="jobs-quote-mobile" class="action3 container-fluid text-center visible-xs-block">
   <div class="row">
-    <div class="col-sm-offset-4 col-sm-6">
-      <h2 class="major">Still Have Questions?</h2>
-      <p>Feel free to contact us with your questions, we promise we'll get back to you within 24 hours or the next blue moon - whichever is sooner.</p>
+    <div class="col-xs-10 col-xs-offset-1 text-left">
       <p>
-      Classes Held at <br />
-      Salt Lake Community College<br />
-      9750 S 300 W<br />
-      Sandy, UT
+        Everything around you that you call life was made up by people that were no smarter than you and you can change it, you can influence it, you can build your own things that other people can use.
       </p>
-      <ul>
-        <li class="fa-envelope">(801) 829-1479</li>
-        <li class="fa-envelope"><a href="#">questions@varsitycode.com</a></li>
-        <li class="fa-twitter"><a href="https://twitter.com/varsitycode">twitter.com/varsitycode</a></li>
-        <li class="fa-facebook"><a href="https://facebook.com/varsitycode">facebook.com/varsitycode</a></li>
-        <li class="fa-instagram"><a href="https://instagram.com/varsitycode">instagram.com/varsitycode</a></li>
-      </ul>
+      <p>- Steve Jobs</p>
     </div>
   </div>
 </section>
 
-<!-- Action2 Section -->
-<div class="secondary-background">
-  <section class="action3 container-fluid text-center wow fadeIn">
+<div id="jobs-background">
+  <section id="jobs-quote-large" class="action3 container-fluid text-center hidden-xs">
     <div class="row">
-      <div class="col-lg-8 col-lg-offset-2">
+      <div class="col-lg-8 col-lg-offset-1">
         <div class="row">
-          <div id="steve_jobs_image" class="col-xs-offset-1 col-xs-4">
-            <%= image_tag "steve_jobs.png", :class => "img-circle" %>
-          </div>
-          <div class="col-xs-6 text-left">
+          <div class="col-sm-4 col-sm-offset-8 text-left">
             <p>
-            Everything around you that you call life was made up by people that were no smarter than you and you can change it, you can influence it, you can build your own things that other people can use.
+              Everything around you that you call life was made up by people that were no smarter than you and you can change it, you can influence it, you can build your own things that other people can use.
             </p>
             <p>- Steve Jobs</p>
           </div>
@@ -238,3 +229,22 @@ title: Varisty Code
     </div>
   </section>
 </div>
+
+<div class="secondary-background">
+  <section id="pre-register-footer" class="container-fluid">
+    <div class="row">
+      <div class="col-sm-12 text-center">
+        <button class="btn btn-primary">
+          <%= link_to "Pre-Register Now", "https://docs.google.com/forms/d/e/1FAIpQLScEy9Qi5SVQO_N6YuCgbrXIb32ZvwBEC9epS3UmpuP8GS-0Ew/viewform" %>
+        </button>
+        <br>
+        <br>
+        <br>
+        <p>
+          Channel your student's love for technology into skills that will change their life.
+        </p>
+      </div>
+    </div>
+  </section>
+</div>
+
