--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -17,26 +17,52 @@
     <%= javascript_include_tag :all %>
   </head>
 
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+      <a id="nav-brand-link" class="navbar-brand" href="/">Varsity Code</a>
+      <button type="button" class="btn btn-default navbar-btn navbar-right">
+        <%= link_to "Pre-Register", "https://docs.google.com/forms/d/e/1FAIpQLScEy9Qi5SVQO_N6YuCgbrXIb32ZvwBEC9epS3UmpuP8GS-0Ew/viewform" %>
+      </button>
+    </div>
+  </nav>
   <body class="<%= page_classes %>">
     <%= yield %>
   </body>
 
   <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          (801) 829-1479
-          questions@varsitycode.com
-          @varsitycode
+    <section id="still-have-questions">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-offset-4 col-sm-6">
+            <h2 class="major">Still Have Questions?</h2>
+            <p>Feel free to contact us with your questions, we promise we'll get back to you within 24 hours or the next blue moon - whichever is sooner.</p>
+            <p>
+            Classes Held at <br />
+            Salt Lake Community College<br />
+            9750 S 300 W<br />
+            Sandy, UT
+            </p>
+            <ul>
+              <li class="fa-envelope">(801) 829-1479</li>
+              <li class="fa-envelope"><a href="#">questions@varsitycode.com</a></li>
+              <li class="fa-twitter"><a href="https://twitter.com/varsitycode">twitter.com/varsitycode</a></li>
+              <li class="fa-facebook"><a href="https://facebook.com/varsitycode">facebook.com/varsitycode</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <p>
+              Copyright 2017 - Varsity Code
+            </p>
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <p>
-            Copyright 2017 - Varsity Code
-          </p>
-        </div>
-      </div>
-    </div>
+    </section>
   </footer>
 </html>
