--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -17,7 +17,7 @@ title: Varisty Code
         <h5>
           Classes Held at Salt Lake Community College in Sandy
         </h5>
-        <button class="btn btn-primary">
+        <button class="btn btn-lg btn-primary">
           <%= link_to "Pre-Register", "https://docs.google.com/forms/d/e/1FAIpQLScEy9Qi5SVQO_N6YuCgbrXIb32ZvwBEC9epS3UmpuP8GS-0Ew/viewform" %>
         </button>
       </div>
@@ -79,14 +79,14 @@ title: Varisty Code
 <div class="secondary-background">
   <section id=modern-skills" class="container-fluid">
     <div class="row">
-      <div class="col-sm-offset-2 col-sm-4">
+      <div class="col-md-offset-2 col-md-4">
         <h2>Learn Modern Technologies</h2>
         <p>Ask any technical hiring manager around, they will tell you these are required skills.</p>
         <p>These skills will allow you to build websites that work on computers, tablets, phones, and more.</p>
         <p>As a class, we will work on our code on GitHub (it's kind of like the Google Docs of code).</p>
         <p>Finally, when we are ready to share our websites with the world, we will host our code on Amazon Web Services (AWS) the world's leading cloud computing provider.</p>
       </div>
-      <div class="col-sm-offset-1 col-sm-4">
+      <div class="col-md-offset-1 col-md-4">
         <div id="tech-logos">
           <%= image_tag "tech.png" %>
         </div>
