--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -134,18 +134,19 @@ title: Varisty Code
       <div class="row">
         <div class="col-sm-6 wow fadeIn" data-wow-delay=".2s">
           <h4>What is tuition for this course?</h4>
-          <p>$50 a week, which includes:</p>
+          <p>Tuition is $50 a week, which includes:</p>
           <ul>
-            <li>12 classroom sessions taught by professional software deveopers</li>
-            <li>Your projects will be personally reviewed by the instructors</li>
+            <li>Lectures/labs run by professional software developers</li>
+            <li>Weekly homework/project review conducted by the instructors</li>
             <li>Instructor email availability for questions on projects and assignments</li>
           </ul>
           <p>We are completely confident in our ability to transform you or your student's interest in the web into valuable technical skills. If you are not satisfied, we'll refund your tuition in full.</p>
+          <p>Tuition will be billed a monthly basis.</p>
         </div>
         <div class="col-sm-6 wow fadeIn" data-wow-delay=".4s">
           <h4>What is the format of each class?</h4>
-          <p>Weekly classes will be held at Salt Lake Community College's Sandy Campus.</p>
-          <p>Each week we will:</p>
+          <p>There are 11 classes during the course, each lasting 1 hour and 45 minutes. Classes are held at Salt Lake Community College's Sandy Campus.</p>
+          <p>Though each week will vary depending on the needs of the class, a typical session will look like this:</p>
           <ul>
             <li>Review the previous week's assignment and answer any questions from previous concepts. (15 minutes)</li>
             <li>Interactive lectures where technial concepts will be taught. Student's will follow along on their own personal computers. (1 Hour)</li>
@@ -194,6 +195,20 @@ title: Varisty Code
           <p>Enrolled students will have first chance to reserve a spot for those classes.</p>
         </div>
       </div>
+      <div class="row">
+        <div class="col-sm-6 wow fadeIn" data-wow-delay=".2s">
+          <h4>How Can I See What My Student Has Learned?</h4>
+          <p>
+            At the end of each course, our students will have the opportunity to present their capstone websites in an auditorium setting to whoever they would like to attend. We'd love to have you see what they have built at the end of the course.
+          </p>
+        </div>
+        <div class="col-sm-6 wow fadeIn" data-wow-delay=".4s">
+          <h4>Can my student sign up with their friends?</h4>
+          <p>
+            Absolutely! We can think of few better ways to get excited about coding then to do so with your friends that you already know and trust. Include the name of your fiend at registration and we'll do our best to get you placed in the same class.
+          </p>
+        </div>
+      </div>
     </div>
   </section>
 </div>
@@ -234,7 +249,7 @@ title: Varisty Code
   <section id="pre-register-footer" class="container-fluid">
     <div class="row">
       <div class="col-sm-12 text-center">
-        <button class="btn btn-primary">
+        <button class="btn btn-lg btn-primary">
           <%= link_to "Pre-Register Now", "https://docs.google.com/forms/d/e/1FAIpQLScEy9Qi5SVQO_N6YuCgbrXIb32ZvwBEC9epS3UmpuP8GS-0Ew/viewform" %>
         </button>
         <br>
