--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -18,7 +18,7 @@ title: Varisty Code
           Classes Held at Salt Lake Community College in Sandy
         </h5>
         <button class="btn btn-lg btn-primary">
-          <%= link_to "Pre-Register", "https://docs.google.com/forms/d/e/1FAIpQLScEy9Qi5SVQO_N6YuCgbrXIb32ZvwBEC9epS3UmpuP8GS-0Ew/viewform" %>
+          <%= link_to "Register", "https://docs.google.com/forms/d/e/1FAIpQLScEy9Qi5SVQO_N6YuCgbrXIb32ZvwBEC9epS3UmpuP8GS-0Ew/viewform" %>
         </button>
       </div>
     </div>
@@ -96,14 +96,15 @@ title: Varisty Code
 </div>
 
 <!-- Action2 Section MailChimp Signup Form -->
-<section class="action2 container-fluid text-left wow fadeIn">
+<section id="instructors" class="container-fluid text-left wow fadeIn">
 	<div class="row">
-		<div class="col-lg-12 col-lg-offset-4">
+		<div class="col-lg-12 text-center">
 			<h2>Instructor</h2>
+      <%= image_tag "nelson.jpg", class: "nelson-pic img-thumbnail" %>
+      <h2>Nelson Wittwer</h2>
 
 			<div class="row">
-				<div class="col-lg-4">
-					<h4>Nelson Wittwer</h4>
+				<div class="text-left col-lg-6 col-lg-offset-3">
 					<p>
 					While Nelson studied Management Information Systems at BYU, Nelson's tech career
 					really began when we was 16 when he started designing websites of his own.
@@ -136,7 +137,7 @@ title: Varisty Code
           <h4>What is tuition for this course?</h4>
           <p>Tuition is $50 a week, which includes:</p>
           <ul>
-            <li>Lectures/labs run by professional software developers</li>
+            <li>Lectures taught by professional software developers</li>
             <li>Weekly homework/project review conducted by the instructors</li>
             <li>Instructor email availability for questions on projects and assignments</li>
           </ul>
@@ -205,7 +206,7 @@ title: Varisty Code
         <div class="col-sm-6 wow fadeIn" data-wow-delay=".4s">
           <h4>Can my student sign up with their friends?</h4>
           <p>
-            Absolutely! We can think of few better ways to get excited about coding then to do so with your friends that you already know and trust. Include the name of your fiend at registration and we'll do our best to get you placed in the same class.
+            Absolutely! We can think of few better ways to get excited about coding then to do so with your friends that you already know and trust. Include the name of your friend at registration and we'll do our best to get you placed in the same class.
           </p>
         </div>
       </div>
@@ -250,7 +251,7 @@ title: Varisty Code
     <div class="row">
       <div class="col-sm-12 text-center">
         <button class="btn btn-lg btn-primary">
-          <%= link_to "Pre-Register Now", "https://docs.google.com/forms/d/e/1FAIpQLScEy9Qi5SVQO_N6YuCgbrXIb32ZvwBEC9epS3UmpuP8GS-0Ew/viewform" %>
+          <%= link_to "Register Now", "https://docs.google.com/forms/d/e/1FAIpQLScEy9Qi5SVQO_N6YuCgbrXIb32ZvwBEC9epS3UmpuP8GS-0Ew/viewform" %>
         </button>
         <br>
         <br>
