Moar call to action

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -18,7 +18,7 @@ title: Varisty Code
           Classes Held at Salt Lake Community College in Sandy
         </h5>
         <button class="btn btn-lg btn-primary">
-          <%= link_to "Register", "https://docs.google.com/forms/d/e/1FAIpQLScEy9Qi5SVQO_N6YuCgbrXIb32ZvwBEC9epS3UmpuP8GS-0Ew/viewform" %>
+          <%= link_to "Register Now", "https://docs.google.com/forms/d/e/1FAIpQLScEy9Qi5SVQO_N6YuCgbrXIb32ZvwBEC9epS3UmpuP8GS-0Ew/viewform" %>
         </button>
       </div>
     </div>
@@ -135,7 +135,7 @@ title: Varisty Code
       <div class="row">
         <div class="col-sm-6 wow fadeIn" data-wow-delay=".2s">
           <h4>What is tuition for this course?</h4>
-          <p>Tuition is $50 a week, which includes:</p>
+          <p>Tuition is $40 a week, which includes:</p>
           <ul>
             <li>Lectures taught by professional software developers</li>
             <li>Weekly homework/project review conducted by the instructors</li>
