--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -4,7 +4,7 @@ title: Varisty Code
 <header id="container" class="intro">
   <div id="landing-header">
     <div class="row">
-      <div class="col-lg-6 col-lg-offset-5">
+      <div class="col-sm-6 col-sm-offset-5">
         <h1>
           After School Coding Program
         </h1>
