--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,7 +1,7 @@
 ---
 title: Varisty Code
 ---
-<header id="container" class="intro">
+<header class="intro">
   <div id="landing-header">
     <div class="row">
       <div class="col-sm-6 col-sm-offset-5">
@@ -12,7 +12,7 @@ title: Varisty Code
           Ages 14-18
         </h5>
         <h5>
-          Starting The Week Of February 13, 2017
+          Week Of February 13, 2017 - Week of April 17, 2017
         </h5>
         <h5>
           Classes Held at Salt Lake Community College in Sandy
@@ -80,16 +80,15 @@ title: Varisty Code
   <section id=modern-skills" class="container-fluid">
     <div class="row">
       <div class="col-md-offset-2 col-md-4">
-        <h2>Learn Modern Technologies</h2>
-        <p>Ask any technical hiring manager around, they will tell you these are required skills.</p>
-        <p>These skills will allow you to build websites that work on computers, tablets, phones, and more.</p>
-        <p>As a class, we will work on our code on GitHub (it's kind of like the Google Docs of code).</p>
-        <p>Finally, when we are ready to share our websites with the world, we will host our code on Amazon Web Services (AWS) the world's leading cloud computing provider.</p>
-      </div>
-      <div class="col-md-offset-1 col-md-4">
         <div id="tech-logos">
           <%= image_tag "tech.png" %>
         </div>
+      </div>
+      <div class="col-md-offset-1 col-md-4">
+        <h2>Learn Modern Technologies</h2>
+        <p>Ask any technical hiring manager around and they will tell you that HTML, CSS, and JavaScript are required skills. They will allow you to build websites that work on computers, tablets, phones, and more.</p>
+        <p>As a class, we will work on our code on GitHub (it's kind of like the Google Docs of code).</p>
+        <p>Finally, when we are ready to share our websites with the world, we will host our code on Amazon Web Services (AWS), the world's leading cloud computing provider.</p>
       </div>
     </div>
   </section>
@@ -106,11 +105,11 @@ title: Varisty Code
 			<div class="row">
 				<div class="text-left col-lg-6 col-lg-offset-3">
 					<p>
-					While Nelson studied Management Information Systems at BYU, Nelson's tech career
+					While Nelson studied Management Information Systems at BYU, his tech career
 					really began when we was 16 when he started designing websites of his own.
 					</p>
 					<p>
-					Nelson has worked as a senior technical consultant for Ernst & Young, advsing Fortune 500 companies. From there he went on to
+					Nelson has worked as a senior technical consultant for Ernst & Young, advising Fortune 500 companies. From there he went on to
 					work at MX building online/mobile banking software. He currently is the CTO of Orca Health, where he helps build mobile apps for
 					orthopedic surgeons. His software is used daily by millions of people.
 					</p>
@@ -146,38 +145,38 @@ title: Varisty Code
         </div>
         <div class="col-sm-6 wow fadeIn" data-wow-delay=".4s">
           <h4>What is the format of each class?</h4>
-          <p>There are 11 classes during the course, each lasting 1 hour and 45 minutes. Classes are held at Salt Lake Community College's Sandy Campus.</p>
+          <p>Once a week, we will meet for 1 hour and 45 mintues to meet in a lecture/lab setting. Classes are held at Salt Lake Community College's Sandy Campus.</p>
           <p>Though each week will vary depending on the needs of the class, a typical session will look like this:</p>
           <ul>
-            <li>Review the previous week's assignment and answer any questions from previous concepts. (15 minutes)</li>
-            <li>Interactive lectures where technial concepts will be taught. Student's will follow along on their own personal computers. (1 Hour)</li>
-            <li>Open lab and one-on-one mentoring. (30 minutes)</li>
+            <li>Review the previous week's assignment and answer any questions from previous concepts (15 minutes)</li>
+            <li>Interactive lectures where technical concepts will be taught. Students will follow along on their own personal computers (1 hour)</li>
+            <li>Open lab and one-on-one mentoring (30 minutes)</li>
           </ul>
         </div>
       </div>
       <div class="row">
         <div class="col-sm-6 wow fadeIn" data-wow-delay=".2s">
-          <h4>Will there be Homework?</h4>
+          <h4>Will there be homework?</h4>
           <p>The goal of our course isn't a grade, but growth. </p>
-          <p>We give students assignments and projects to do in their own time that allow them to be creative, have fun, and enjoy learning how to build in their own time at their own pace. </p>
+          <p>We give students assignments and projects to do between classes that allow them to be creative, have fun, and enjoy learning how to build their own sites.</p>
         </div>
         <div class="col-sm-6 wow fadeIn" data-wow-delay=".4s">
-          <h4>What Pre-requisites Do you Recommend?</h4>
+          <h4>What pre-requisites do you recommend?</h4>
           <p>The biggest pre-requisite is enthousiasm. The biggest indicator for success is an excitement about the course itself. If you are excited about learning to code or creating your own website
           you will be primed to succeed.</p>
-          <p>Technically speaking, a basic understanding of computing is expected. Students should be familiar with how to use the internet and create files and folders.</p>
+          <p>Technically speaking, a basic understanding of comptuers is expected: students should be familiar with how to use the internet and create files and folders.</p>
         </div>
       </div>
       <div class="row">
         <div class="col-sm-6 wow fadeIn" data-wow-delay=".4s">
           <h4>Do I have to bring my own computer?</h4>
           <p>
-          Yes, you will need to pring a personal laptop computer to each class. Setting up a computer to write code can be tricky. Once it is setup this will give you the ability to work at home.
+            Yes, you will need to bring a personal laptop computer to each class. We will help your student setup their computer in class so they can have the tools to build at home.
           </p>
         </div>
         <div class="col-sm-6 wow fadeIn" data-wow-delay=".2s">
           <h4>What type of computer will I need to participate?</h4>
-          <p>Any PC, Mac, or Linux  that has wifi and a browser.</p>
+          <p>Any (laptop) PC, Mac, or Linux  that has wifi and a browser.</p>
         </div>
       </div>
       <div class="row">
@@ -186,27 +185,21 @@ title: Varisty Code
           <p>
             14 students per class or 1 teacher for every 7 students. Both teachers are present for every class.
           </p>
-          <p>Lab partners are similar in age which allows each lab group to progress at a rate they are comfortable with.</p>
+          <p>Lab partners are similar in age, which allows each lab group to progress at a rate they are comfortable with.</p>
         </div>
         <div class="col-sm-6 wow fadeIn" data-wow-delay=".4s">
           <h4>My student loved their experience! Do you offer any more courses?</h4>
           <p>
           You know it! After this foundational course, we'll be offering more advanced web classes for those wanting to continue on.
           </p>
-          <p>Enrolled students will have first chance to reserve a spot for those classes.</p>
+          <p>Enrolled students will have the first chance to reserve a spot for those classes.</p>
         </div>
       </div>
       <div class="row">
         <div class="col-sm-6 wow fadeIn" data-wow-delay=".2s">
-          <h4>How Can I See What My Student Has Learned?</h4>
+          <h4>How can I see what my student has learned?</h4>
           <p>
-            At the end of each course, our students will have the opportunity to present their capstone websites in an auditorium setting to whoever they would like to attend. We'd love to have you see what they have built at the end of the course.
-          </p>
-        </div>
-        <div class="col-sm-6 wow fadeIn" data-wow-delay=".4s">
-          <h4>Can my student sign up with their friends?</h4>
-          <p>
-            Absolutely! We can think of few better ways to get excited about coding then to do so with your friends that you already know and trust. Include the name of your friend at registration and we'll do our best to get you placed in the same class.
+            At the end of each course, students will have the opportunity to present their capstone websites in an auditorium setting to anyone they would like to attend. We'd love to have you see what they have built at the end of the course.
           </p>
         </div>
       </div>
@@ -218,10 +211,10 @@ title: Varisty Code
 <section id="jobs-quote-mobile" class="action3 container-fluid text-center visible-xs-block">
   <div class="row">
     <div class="col-xs-10 col-xs-offset-1 text-left">
-      <p>
+      <p class="jobs-quote">
         Everything around you that you call life was made up by people that were no smarter than you and you can change it, you can influence it, you can build your own things that other people can use.
       </p>
-      <p>- Steve Jobs</p>
+      <p class="jobs-quote">- Steve Jobs</p>
     </div>
   </div>
 </section>
@@ -229,13 +222,16 @@ title: Varisty Code
 <div id="jobs-background">
   <section id="jobs-quote-large" class="action3 container-fluid text-center hidden-xs">
     <div class="row">
-      <div class="col-lg-8 col-lg-offset-1">
+      <div class="col-md-8 col-md-offset-1">
         <div class="row">
-          <div class="col-sm-4 col-sm-offset-8 text-left">
-            <p>
+          <div class="big-quote col-md-offset-7 col-md-1">
+            "
+          </div>
+          <div class="col-sm-4 text-left">
+            <p class="jobs-quote">
               Everything around you that you call life was made up by people that were no smarter than you and you can change it, you can influence it, you can build your own things that other people can use.
             </p>
-            <p>- Steve Jobs</p>
+            <p class="jobs-quote">- Steve Jobs</p>
           </div>
         </div>
         <br>
