--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,6 +9,7 @@
     <title><%= current_page.data.title || "Varsity Code" %></title>
 
     <link href='//fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=News+Cycle" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
@@ -35,19 +36,25 @@
         <div class="row">
           <div class="col-sm-offset-4 col-sm-6">
             <h2 class="major">Still Have Questions?</h2>
-            <p>Feel free to contact us with your questions, we promise we'll get back to you within 24 hours or the next blue moon - whichever is sooner.</p>
-            <p>
-            Classes Held at <br />
+            <p>Feel free to contact us with your questions. We promise we'll get back to you within 24 hours.</p>
+            <div class="row">
+              <div class="col-sm-4">
+                <div class="text-center">
+                  (801) 829-1479
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <a href="#">questions@varsitycode.com</a>
+              </div>
+            </div>
+            <br>
+            <br>
+            <p class-"class-info">
+            Classes held at <br />
             Salt Lake Community College<br />
             9750 S 300 W<br />
             Sandy, UT
             </p>
-            <ul>
-              <li class="fa-envelope">(801) 829-1479</li>
-              <li class="fa-envelope"><a href="#">questions@varsitycode.com</a></li>
-              <li class="fa-twitter"><a href="https://twitter.com/varsitycode">twitter.com/varsitycode</a></li>
-              <li class="fa-facebook"><a href="https://facebook.com/varsitycode">facebook.com/varsitycode</a></li>
-            </ul>
           </div>
         </div>
 
