--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -21,7 +21,7 @@
   <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       <a id="nav-brand-link" class="navbar-brand" href="/">Varsity Code</a>
-      <button type="button" class="btn btn-primary navbar-btn navbar-right">
+      <button type="button" class="pull-right btn btn-primary navbar-btn">
         <%= link_to "Register Now", "https://docs.google.com/forms/d/e/1FAIpQLScEy9Qi5SVQO_N6YuCgbrXIb32ZvwBEC9epS3UmpuP8GS-0Ew/viewform" %>
       </button>
     </div>
@@ -32,41 +32,39 @@
 
   <footer>
     <section id="still-have-questions">
-      <div class="container">
+      <div class="container text-center">
         <div class="row">
-          <div class="col-sm-offset-4 col-sm-6">
+          <div class="col-md-12">
             <h2 class="major">Still Have Questions?</h2>
             <p>Feel free to contact us with your questions. We promise we'll get back to you within 24 hours.</p>
-            <div class="row">
-              <div class="col-sm-4">
-                <div class="text-center">
-                  (801) 829-1479
-                </div>
-              </div>
-              <div class="col-sm-4">
-                <a href="#">questions@varsitycode.com</a>
-              </div>
+          </div>
+        </div>
+        <div class="contact-info">
+          <div class="row">
+            <div class="col-md-12">
+              <p class="text-highlight">(801) 829-1479</p>
             </div>
-            <br>
-            <br>
-            <p class-"class-info">
-            Classes held at <br />
-            Salt Lake Community College<br />
-            9750 S 300 W<br />
-            Sandy, UT
-            </p>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <p><a href="#">questions@varsitycode.com</a></p>
+            </div>
           </div>
         </div>
 
-        <br>
-        <br>
-        <br>
-        <br>
         <div class="row">
-          <div class="col-lg-12 text-center">
+          <div class="class-info col-lg-12 text-center">
             <p>
-              Copyright 2017 - Varsity Code
+              Classes held at <br />
+              Salt Lake Community College<br />
+              9750 S 300 W<br />
+              Sandy, UT
             </p>
+            <div class="copyright">
+              <p>
+                Copyright 2017 - Varsity Code
+              </p>
+            </div>
           </div>
         </div>
       </div>
