--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -141,7 +141,7 @@ title: Varisty Code
             <li>Instructor email availability for questions on projects and assignments</li>
           </ul>
           <p>We are completely confident in our ability to transform you or your student's interest in the web into valuable technical skills. If you are not satisfied, we'll refund your tuition in full.</p>
-          <p>Tuition will be billed a monthly basis.</p>
+          <p>Tuition will be billed on a monthly basis.</p>
         </div>
         <div class="col-sm-6 wow fadeIn" data-wow-delay=".4s">
           <h4>What is the format of each class?</h4>
@@ -162,7 +162,7 @@ title: Varisty Code
         </div>
         <div class="col-sm-6 wow fadeIn" data-wow-delay=".4s">
           <h4>What pre-requisites do you recommend?</h4>
-          <p>The biggest pre-requisite is enthousiasm. The biggest indicator for success is an excitement about the course itself. If you are excited about learning to code or creating your own website
+          <p>The biggest pre-requisite is enthusiasm. The biggest indicator for success is an excitement about the course itself. If you are excited about learning to code or creating your own website
           you will be primed to succeed.</p>
           <p>Technically speaking, a basic understanding of comptuers is expected: students should be familiar with how to use the internet and create files and folders.</p>
         </div>
