--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -12,7 +12,7 @@ title: Varisty Code
           Ages 14-18
         </h5>
         <h5>
-          Week Of February 13, 2017 - Week of April 17, 2017
+          February 16, 2017 - April 20, 2017
         </h5>
         <h5>
           Classes Held at Salt Lake Community College in Sandy
