--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -106,7 +106,7 @@ title: Varisty Code
 				<div class="text-left col-lg-6 col-lg-offset-3">
 					<p>
 					While Nelson studied Management Information Systems at BYU, his tech career
-					really began when we was 16 when he started designing websites of his own.
+					really began when he was 16 when he started designing websites of his own.
 					</p>
 					<p>
 					Nelson has worked as a senior technical consultant for Ernst & Young, advising Fortune 500 companies. From there he went on to
@@ -146,7 +146,7 @@ title: Varisty Code
         <div class="col-sm-6 wow fadeIn" data-wow-delay=".4s">
           <h4>What is the format of each class?</h4>
           <p>Once a week, we will meet for 1 hour and 45 mintues to meet in a lecture/lab setting. Classes are held at Salt Lake Community College's Sandy Campus.</p>
-          <p>Though each week will vary depending on the needs of the class, a typical session will look like this:</p>
+          <p>Though each week's format will vary depending on the needs of the class, a typical session will look like this:</p>
           <ul>
             <li>Review the previous week's assignment and answer any questions from previous concepts (15 minutes)</li>
             <li>Interactive lectures where technical concepts will be taught. Students will follow along on their own personal computers (1 hour)</li>
@@ -183,9 +183,7 @@ title: Varisty Code
         <div class="col-sm-6 wow fadeIn" data-wow-delay=".2s">
           <h4>How big is each class?</h4>
           <p>
-            14 students per class or 1 teacher for every 7 students. Both teachers are present for every class.
-          </p>
-          <p>Lab partners are similar in age, which allows each lab group to progress at a rate they are comfortable with.</p>
+            Ther are 14 students per class. Students will be asked to work with a lab partner each week. Lab partners are similar in age, which allows each lab group to progress at a rate they are comfortable with.</p>
         </div>
         <div class="col-sm-6 wow fadeIn" data-wow-delay=".4s">
           <h4>My student loved their experience! Do you offer any more courses?</h4>
