point to heroku for registration

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -18,7 +18,7 @@ title: Varisty Code
           Classes Held at Salt Lake Community College in Sandy
         </h5>
         <button class="btn btn-lg btn-primary">
-          <%= link_to "Register Now", "https://docs.google.com/forms/d/e/1FAIpQLScEy9Qi5SVQO_N6YuCgbrXIb32ZvwBEC9epS3UmpuP8GS-0Ew/viewform" %>
+          <%= link_to "Register Now", "https://varsitycode.herokuapp.com" %>
         </button>
       </div>
     </div>
@@ -245,7 +245,7 @@ title: Varisty Code
     <div class="row">
       <div class="col-sm-12 text-center">
         <button class="btn btn-lg btn-primary">
-          <%= link_to "Register Now", "https://docs.google.com/forms/d/e/1FAIpQLScEy9Qi5SVQO_N6YuCgbrXIb32ZvwBEC9epS3UmpuP8GS-0Ew/viewform" %>
+          <%= link_to "Register Now", "https://varsitycode.herokuapp.com" %>
         </button>
         <br>
         <br>
