--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -22,7 +22,7 @@
     <div class="container">
       <a id="nav-brand-link" class="navbar-brand" href="/">Varsity Code</a>
       <button type="button" class="pull-right btn btn-primary navbar-btn">
-        <%= link_to "Register Now", "https://docs.google.com/forms/d/e/1FAIpQLScEy9Qi5SVQO_N6YuCgbrXIb32ZvwBEC9epS3UmpuP8GS-0Ew/viewform" %>
+        <%= link_to "Register Now", "https://varsitycode.herokuapp.com" %>
       </button>
     </div>
   </nav>
